fix naw z-index container

--- a/src/app/components/card/carousel/carouselBi.module.css
+++ b/src/app/components/card/carousel/carouselBi.module.css
@@ -21,7 +21,7 @@
 	border: 1px solid black;
 	border-radius: 25px;
 	margin-right: -15px;
-	padding-bottom: 4px;
+	padding-bottom: 2px;
 	padding-left: 4px;
 	padding-right: 8px;
 
@@ -30,7 +30,6 @@
 .nextBtn {
 	margin-right: 0px;
 	margin-left: -15px;
-	padding-bottom: 4px;
 	padding-left: 8px;
 	padding-right: 4px;
 }
