--- a/src/app/startComponents/naw/Naw.module.css
+++ b/src/app/startComponents/naw/Naw.module.css
@@ -1,17 +1,18 @@
 .container {
 	display: flex;
-
     height: 80px;
     padding-top: 5px;
     margin-top: 20px;
     border-top: 1px solid black;
+    position: relative;
+    z-index: -1;
 }
 
 .itemCarousel {
 	width: 100%;
 	height: 50px;
 	padding: 1% 15%;
-	background-color: rgba(255, 0, 0, 0);
+	background-color: rgba(219, 0, 0, 0);
 	display: flex;
 	justify-content: space-evenly;
 	align-items: start;
@@ -43,13 +44,13 @@
 }
 .nextBtn{
     padding-bottom: 4px;
-	padding-left: 14px;
+	padding-left: 10px;
 	padding-right: 6px;
 }
 .prevBtn{
     padding-bottom: 4px;
 	padding-left: 6px;
-	padding-right: 14px;
+	padding-right: 10px;
 }
 .filterBtn {
 	border: 1px solid black;
